# Better-CreatorLayer

./: CMakeLists.txt  README.md  about.md  changelog.md  mod.json
.github/workflows/: build.yml  release.yml  relwithdebinfo.yml
src/: TimelyLayer.cpp  TimelyLayer.hpp  Variables.cpp  Variables.hpp  main.cpp
